Collada importer doesn't import armature #34049

Closed
opened 2013-01-30 12:54:47 +01:00 by inactive account · 7 comments

%%%We're trying to get mocap data from Vicon Blade into Blender. Vicon Blade records the mocap markers, and can generate a skeletal motion from them. This motion, along with the original markers and mocap cameras, are then saved to the FBX format.

Using the Autodesk FBX SDK I created a small program that reads the FBX and writes it into a COLLADA file. When importing this COLLADA file into Blender, the skeleton/armature is not loaded. Blender does import the mocap markers and the cameras. I have attached the 7-zipped COLLADA file that I want to import.

When importing the COLLADA file into Maya it shows everything just fine, so the data I'm after is certainly stored in the COLLADA file.

Blender version: 2.65 64-bit on Win7
%%%

%%%We're trying to get mocap data from Vicon Blade into Blender. Vicon Blade records the mocap markers, and can generate a skeletal motion from them. This motion, along with the original markers and mocap cameras, are then saved to the FBX format. Using the Autodesk FBX SDK I created a small program that reads the FBX and writes it into a COLLADA file. When importing this COLLADA file into Blender, the skeleton/armature is not loaded. Blender does import the mocap markers and the cameras. I have attached the 7-zipped COLLADA file that I want to import. When importing the COLLADA file into Maya it shows everything just fine, so the data I'm after is certainly stored in the COLLADA file. Blender version: 2.65 64-bit on Win7 %%%

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%The Blender importer currently expects that a skeleton is always enclosed in a root node which is NOT of type JOINT. But in your file the skeleton's root node is already a JOINT and that's why the importer does not recognize the skeleton.

Workaround:

Open the collada file with your text editor and locate the line which contains:

      <node name="root" id="root" sid="root" type="JOINT">

Then enclose this line by adding an artificial extra node, so at the end it looks like this:

``` ```

The import works now. However it takes an extremely long time (several minutes) to import. And it creates a huge amount of warning messages. I looked at that as well but could not yet find the reason for the long runtime.%%%

%%%The Blender importer currently expects that a skeleton is always enclosed in a root node which is NOT of type JOINT. But in your file the skeleton's root node is already a JOINT and that's why the importer does not recognize the skeleton. Workaround: Open the collada file with your text editor and locate the line which contains: ``` <node name="root" id="root" sid="root" type="JOINT"> ``` Then enclose this line by adding an artificial extra node, so at the end it looks like this: <node name="skeleton" id="skeleton" sid="skeleton" type="NODE"> ``` <node name="root" id="root" sid="root" type="JOINT"> ``` </node> The import works now. However it takes an extremely long time (several minutes) to import. And it creates a huge amount of warning messages. I looked at that as well but could not yet find the reason for the long runtime.%%%

%%%Thanks for the workaround, I'll give that a try.

Please consider this ticket as a feature request to recognise skeletons without the NODE surrounding it. I think that you / Blender have this fixed much faster than Autodesk change their FBX SDK ;-)%%%

%%%Thanks for the workaround, I'll give that a try. Please consider this ticket as a feature request to recognise skeletons without the NODE surrounding it. I think that you / Blender have this fixed much faster than Autodesk change their FBX SDK ;-)%%%
Member

%%%Fixed in revision r54677%%%

%%%Fixed in revision r54677%%%
Member

%%%Your reported issue has been fixed in SVN. Thanks for taking the
time to report!.%%%

%%%Your reported issue has been fixed in SVN. Thanks for taking the time to report!.%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

%%%Awesome!

Do you know whether this fix will be included in 2.66?%%%

%%%Awesome! Do you know whether this fix will be included in 2.66?%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34049
No description provided.