fix #34049: Collada importer doesn't import armature. Added support for 'rootless' armature similar to Maya.